# gnssLearn

./: CMakeLists.txt  Dockerfile  README.md  exercicios_en_US.ts  gnsstime.cpp  gnsstime.h  ionosphere.cpp  ionosphere.h  main.cpp  orbitreader.cpp  orbitreader.h  rinex3.cpp  rinex3.h  sp3.cpp  sp3.h  spp.cpp  spp.h  sps.cpp  sps.h  test.cpp
data/: gfz21482.sp3
